# script

./: .gitignore  pyproject.toml
config/: codeForm.json  print_code.json
data/: MusicCollection.json  code_descriptions.json  interview_data.json  morpheus_time_logger.json  priorities.json  projects.json  refactor_log.json  run.json  scenes.json  schedule.json  state.json  task_log.json  tasks.json  wellness_log.json
data/documentation_template/: Class.md  Function_Group.md  Interface_Group.md  Scene.md  Script.md
docs/: args.md  cli-commands.md  log.md  tree.md
script/: log_test.py
src/: codeViewer.py  copy_doc_template.py  log_goal.py  log_project.py  log_step.py  mp3.py  music_cli.py  project_time_logger_input.py  run.ps1  sceneForm.py  sceneViewer.py  schedule.py  watch_time.py  wellness_tracker.py
src/cli_app/: app_context.py  cli_app.py  main.py
src/cli_app/base/: base_command.py  base_module.py
src/cli_app/commands/: add.py  add_task.py  clear.py  copy_doc.py  exit.py  greet.py  (+7 more)
src/info/: main.py
src/log/: main.py  project_log_schema.json  utils.py
src/note/: main.py
src/pymsg/: main.py
src/record/: record.ps1
src/script/: codeFlow.py  codeForm.py  interview_script.py  log_project.py  project_selection.py  project_time_logger.py  run_module.ps1  sceneForm.py  wellness_tracker.py
src/tree/: config.json  main.py
src/utils/: check_git_changes.py  clipboard_utils.py  forward_slash.py  foto_check.py  foto_stats.py  info.py  note.py  pc_activity.ps1  pc_activity.py  snippet.py  tree.json  tree.py
src/web/: record.html
src/zip/: config.json  main.py
(+155 files in other folders)
