[project]
name = "script"
version = "0.0.1"

[project.scripts]
log = "log.main:main"
fstree = "tree.main:main"
checkgit = "utils.check_git_changes:main"
fslash = "utils.forward_slash:main"
info = "utils.main:main"
note = "utils.main:main"
pymsg = "utils.main:main"
snippet = "utils.main:main"
zip = "zip.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]