[project]
name = "script"
version = "0.0.1"

[project.scripts]
log = "log.main:main"
fstree = "tree.main:main"
checkgit = "utils.check_git_changes:main"
fslash = "utils.forward_slash:main"
foto = "utils.foto_stats:main"
fotocheck = "utils.foto_check:main"
myinfo = "utils.info:main"
note = "utils.note:main"
pymsg = "utils.pymsg:main"
snippet = "utils.snippet:main"
zip_tool = "zip.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]